--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>{{ block "title" . }}Centro Cilindri{{ end }}</title>
+    <meta name="viewport" content="width=device-width" />
     <meta name="description" content="{{ .Description }}" />
     {{/* styles */}}
     {{ $options := dict "inlineImports" true }}
