--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,8 +18,8 @@
         <nav>
           <ul class="flex items-center gap-x-8 text-sm font-medium">
             <li><a href="/about" class="hover:text-sky-700">Chi siamo</a></li>
-            <li><a href="#" class="hover:text-sky-700">I nostri servizi</a></li>
-            <li><a href="#" class="hover:text-sky-700">Contatti</a></li>
+            <li><a href="/servizi" class="hover:text-sky-700">I nostri servizi</a></li>
+            <li><a href="/contatti" class="hover:text-sky-700">Contatti</a></li>
           </ul>
         </nav>
       </div>
@@ -31,9 +31,9 @@
   <!-- Mobile menu, show/hide based on menu state. -->
   <div class="md:hidden" id="mobile-menu">
     <ul class="space-y-1 px-2 pb-3 pt-2 font-medium">
-      <li><a href="#" class="block px-3 py-2 hover:text-sky-700">Chi siamo</a></li>
-      <li><a href="#" class="block px-3 py-2 hover:text-sky-700">I nostri servizi</a></li>
-      <li><a href="#" class="block px-3 py-2 hover:text-sky-700">Contatti</a></li>
+      <li><a href="/about" class="block px-3 py-2 hover:text-sky-700">Chi siamo</a></li>
+      <li><a href="/servizi" class="block px-3 py-2 hover:text-sky-700">I nostri servizi</a></li>
+      <li><a href="/contatti" class="block px-3 py-2 hover:text-sky-700">Contatti</a></li>
     </ul>
   </div>
 </header>
