--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,10 +3,10 @@
 <section class="relative isolate overflow-hidden py-32 sm:py-40 bg-slate-800">
   <div class="max-w-7xl mx-auto">
     <div class="px-4 md:px-6 lg:px-8">
-      <div class="mb-6 sm:mb-10 font-bold text-white tracking-tight text-center sm:text-left">
-        <p class="text-4xl sm:text-5xl">Cilindri idraulici e pneumatici</p>
-        <p class="text-4xl sm:text-5xl">Progettazione e costruzione</p>
-        <p class="text-4xl sm:text-5xl">Assistenza e vendita guarnizioni</p>
+      <div class="mb-6 sm:mb-10 font-semibold text-white tracking-tight text-center sm:text-left">
+        <p class="text-3xl sm:text-5xl mb-2">Cilindri idraulici e pneumatici</p>
+        <p class="text-3xl sm:text-5xl mb-2">Progettazione e costruzione</p>
+        <p class="text-3xl sm:text-5xl">Assistenza e vendita guarnizioni</p>
       </div>
       <a href="#" class="text-white">I nostri servizi <span aria-hidden="true">&rarr;</span></a>
     </div>
