--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>{{ block "title" . }}Centro Cilindri{{ end }}</title>
-    <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="{{ .Description }}" />
+    <meta name="viewport" content="width=device-width"/>
+    <meta name="description" content="{{ .Description }}"/>
     {{/* styles */}}
     {{ $options := dict "inlineImports" true }}
     {{ $styles := resources.Get "css/styles.css" }}
@@ -12,9 +12,7 @@
     {{ if hugo.IsProduction }}
       {{ $styles = $styles | minify | fingerprint | resources.PostProcess }}
     {{ end }}
-    <link href="{{ $styles.RelPermalink }}" rel="stylesheet" />
-    <script src="//unpkg.com/alpinejs" defer></script>
-    <script defer src="/js/main.js"></script>
+    <link href="{{ $styles.RelPermalink }}" rel="stylesheet"/>
   </head>
   <body>
     {{ partial "header.html" . }}
@@ -22,5 +20,6 @@
     {{ partial "footer.html" . }}
 
     <!-- We use cookies to provide our services and for analytics and marketing. To find out more about our use of cookies and how you can disable them, please see our Privacy Policy. By continuing to browse our website, you agree to our use of cookies. -->
+    <script src="/js/main.js"></script>
   </body>
 </html>
