--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,10 @@
 {{ define "main" }}
 
 <!-- Intro -->
-<section class="max-w-screen-xl mx-auto py-8 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
-  <p class="mb-8 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Manutenzione, progettazione e costruzione di cilindri idraulici e pneumatici</p>
-  <p class="mb-8 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Assistenza e vendita guarnizioni</p>
+<section class="max-w-screen-xl mx-auto py-12 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
+  <p class="mb-8 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Cilindri idraulici e pneumatici</p>
+  <p class="mb-4 text-3xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-5xl dark:text-gray-900">Li ripariamo, li costruiamo</p>
+  <p class="mb-8 text-3xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-5xl dark:text-gray-900">Forniamo assistenza e guarnizioni</p>
   <a href="#" class="inline-flex items-center justify-center py-1 text-base font-medium text-center text-white focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
     I nostri servizi
     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -15,42 +16,15 @@
 <!-- Gallery -->
 <div class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
   <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+    {{ range seq 12 }}
+      {{ $image := resources.Get (printf "images/ref-%d.jpg" .) }}
+      {{ with $image }}
+        <div>
+          <img class="h-auto max-w-full rounded-lg" src="{{ .RelPermalink }}" alt="">
+        </div>
+      {{ end }}
+    {{ end }}
     <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-6.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-7.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-8.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-9.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-10.jpg" alt="">
-    </div>
-    <div>
-      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-11.jpg" alt="">
-    </div>
   </div>
 </div>
 
