--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
   <p class="mb-4 text-3xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-5xl dark:text-gray-900">Li ripariamo, li costruiamo</p>
   <p class="mb-8 text-3xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-5xl dark:text-gray-900">Forniamo assistenza e guarnizioni</p>
   <a href="#" class="inline-flex items-center justify-center py-1 text-base font-medium text-center text-white focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-    I nostri servizi
+    Scopri i nostri servizi
     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
     </svg>
