aggiunto background alle sezioni (fake per ora)

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,12 @@
 {{ define "main" }}
 
 <!-- Intro -->
-<section class="max-w-screen-xl mx-auto py-12 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16 bg-slate-800">
-  <p class="mb-8 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Cilindri idraulici e pneumatici</p>
-  <p class="mb-4 text-3xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-5xl dark:text-gray-900">Li ripariamo, li costruiamo</p>
-  <p class="mb-8 text-3xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-5xl dark:text-gray-900">Forniamo assistenza e guarnizioni</p>
+<section class="section-with-background max-w-screen-xl mx-auto py-12 sm:py-16 lg:py-36 px-4 sm:px-8 lg:px-16">
+  <h1 class="mb-8 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Cilindri idraulici e pneumatici</h1>
+  <div class="mb-8 text-3xl md:text-5xl lg:text-5xl font-semibold leading-none tracking-tight text-gray-300">
+    <p class="mb-4">Li ripariamo, li costruiamo</p>
+    <p>Forniamo assistenza e guarnizioni</p>
+  </div>
   <a href="#" class="inline-flex items-center justify-center py-1 text-base font-medium text-center text-white focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
     Scopri i nostri servizi
     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
