nuovi inserimenti e modifiche

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,7 +11,7 @@
         <a href="#" class="mr-4 hover:underline md:mr-6">Mappa del sito</a>
       </li>
       <li>
-        <a href="#" class="hover:underline">Contatti</a>
+        <a href="{{ relref . "/contatti" }}" class="hover:underline">Contatti</a>
       </li>
     </ul>
   </div>
