--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 
 <!-- Intro -->
-<section class="section-with-background max-w-screen-xl mx-auto py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
-  <h1 class="mb-8 text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl dark:text-gray-900">Cilindri idraulici e pneumatici</h1>
-  <div class="mb-8 text-3xl md:text-5xl lg:text-5xl font-semibold leading-none tracking-tight text-gray-300">
+<section style="background-image: url('{{ resources.Get "images/ref-12.jpg" }}');" class="section-with-background max-w-screen-xl mx-auto py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
+  <h1 class="mb-8 text-xl md:text-2xl lg:text-3xl font-semibold leading-none tracking-normal text-white uppercase">Cilindri idraulici e pneumatici</h1>
+  <div class="mb-8 text-3xl md:text-5xl lg:text-5xl font-semibold leading-none tracking-tight text-gray-200">
     <p class="mb-4">Li ripariamo, li costruiamo</p>
     <p>Forniamo assistenza e guarnizioni</p>
   </div>
