--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,22 @@
 
 {{ define "main" }}
 
-{{ .Content }}
+<div class="lg:mt-[-6rem]">
+  <!-- Hero -->
+  <section class="max-w-screen-xl mx-auto relative z-10">
+    <div class="absolute inset-0 z-10 bg-black hero-background"></div>
+    <div class="hero-content-wrapper relative z-20 w-full h-full">
+      <div class="text-contrast relative w-full text-white">
+        <div class="py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
+          <div class="lg:w-2/3">
+            <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">{{ .Params.heading }}</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  {{ .Content }}
+</div>
 
 {{ end }}
