--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
     <link href="{{ $styles.RelPermalink }}" rel="stylesheet"/>
   </head>
   <body>
-    {{ partial "header.html" . }}
+    {{ partial "nav.html" . }}
     <main>{{ block "main" . }}{{ end }}</main>
     {{ partial "footer.html" . }}
 
