--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
       <div class="text-contrast relative w-full text-white">
         <div class="py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
           <div class="lg:w-2/3">
-            <h1 class="text-4xl font-semibold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">{{ .Params.heading }}</h1>
+            <h1 class="text-4xl md:text-5xl lg:text-6xl font-semibold leading-none tracking-tight text-white">{{ .Params.heading }}</h1>
           </div>
         </div>
       </div>
