--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <div class="lg:mt-[-6rem]">
 
   <!-- Intro -->
-  <section class="max-w-screen-2xl mx-auto relative z-10">
+  <section class="max-w-screen-xl mx-auto relative z-10">
     {{ $background := resources.Get "images/vertical-cylinders.jpg" }}
     <div class="absolute inset-0 z-10 bg-black hero-background" style="background-image: url('{{ $background.RelPermalink }}');"></div>
     <div class="hero-content-wrapper relative z-20 w-full h-full">
@@ -11,11 +11,11 @@
           <div class="lg:w-2/3">
             <div>
               <p class="mb-4 text-xl md:text-2xl font-semibold leading-none tracking-normal red-title uppercase">Cilindri idraulici e pneumatici</p>
-              <div class="mb-8 text-2xl sm:text-3xl lg:text-5xl font-semibold leading-none tracking-tight text-gray-200">
+              <div class="mb-8 text-3xl md:text-4xl lg:text-5xl font-semibold leading-none tracking-tight text-gray-200">
                 <p class="mb-2 sm:mb-0">Li ripariamo, li costruiamo</p>
                 <p>Forniamo assistenza e guarnizioni</p>
               </div>
-              <a href="{{ relref . "servizi" }}" class="inline-flex items-center justify-center py-1 text-gray-300 hover:text-white font-medium">
+              <a href="{{ relref . "servizi" }}" class="inline-flex items-center justify-center py-2 text-gray-300 hover:text-white font-medium">
                 Scopri i nostri servizi
                 <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -29,17 +29,19 @@
   </section>
 
   <!-- Gallery -->
-  <div class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
-    <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-      {{ range seq 12 }}
-        {{ $image := resources.Get (printf "images/ref-%d.jpg" .) }}
-        {{ with $image }}
-          <div>
-            <img class="h-auto max-w-full rounded-lg" src="{{ .RelPermalink }}" alt="">
-          </div>
+  <div class="max-w-screen-xl mx-auto">
+    <div class="px-4 py-8 sm:py-16 lg:py-36 sm:px-8 lg:px-16">
+      <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+        {{ range seq 12 }}
+          {{ $image := resources.Get (printf "images/ref-%d.jpg" .) }}
+          {{ with $image }}
+            <div>
+              <img class="h-auto max-w-full rounded-lg" src="{{ .RelPermalink }}" alt="">
+            </div>
+          {{ end }}
         {{ end }}
-      {{ end }}
-      <div>
+        <div>
+      </div>
     </div>
   </div>
 
