--- a/assets/css/components/hero.css
+++ b/assets/css/components/hero.css
@@ -1,9 +1,14 @@
-.hero-background {
+.hero-bg {
   background-blend-mode: multiply;
   background-repeat: no-repeat;
-  background-position: 50%;
   background-size: cover;
+  background-position: 50%;
   background-color: rgba(55, 65, 81, 0.9);
+}
+
+.hero-bg-gradient {
+  background-color: transparent;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.2), transparent);
 }
 
 .hero-content-wrapper {
