--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
 <div class="lg:mt-[-6rem]">
   <!-- Hero -->
   <section class="max-w-screen-xl mx-auto relative z-10">
-    <div class="absolute inset-0 z-10 bg-black hero-background"></div>
+    <div class="absolute inset-0 z-10 hero-bg"></div>
     <div class="hero-content-wrapper relative z-20 w-full h-full">
       <div class="text-contrast relative w-full text-white">
         <div class="py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
