--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,15 +4,15 @@
   <!-- Intro -->
   <section class="max-w-screen-xl mx-auto relative z-10">
     {{ $background := resources.Get "images/vertical-cylinders.jpg" }}
-    <div class="absolute inset-0 z-10 bg-black hero-background" style="background-image: url('{{ $background.RelPermalink }}');"></div>
+    <div class="absolute inset-0 z-10 hero-bg" style="background-image: url('{{ $background.RelPermalink }}');"></div>
     <div class="hero-content-wrapper relative z-20 w-full h-full">
       <div class="text-contrast relative w-full text-white">
         <div class="py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
           <div class="lg:w-2/3">
             <div>
               <p class="mb-4 text-xl md:text-2xl font-semibold leading-none tracking-normal red-title uppercase">Cilindri idraulici e pneumatici</p>
-              <div class="mb-8 text-3xl md:text-4xl lg:text-5xl font-semibold leading-none tracking-tight text-gray-200">
-                <p class="mb-2 sm:mb-0">Li ripariamo, li costruiamo</p>
+              <div class="mb-8 text-3xl md:text-4xl lg:text-5xl font-semibold leading-none tracking-tight text-white">
+                <p class="mb-2">Li ripariamo, li costruiamo</p>
                 <p>Forniamo assistenza e guarnizioni</p>
               </div>
               <a href="{{ relref . "servizi" }}" class="inline-flex items-center justify-center py-2 text-gray-300 hover:text-white font-medium">
@@ -30,7 +30,7 @@
 
   <!-- Gallery -->
   <div class="max-w-screen-xl mx-auto">
-    <div class="px-4 py-8 sm:py-16 lg:py-36 sm:px-8 lg:px-16">
+    <div class="py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
       <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
         {{ range seq 12 }}
           {{ $image := resources.Get (printf "images/ref-%d.jpg" .) }}
@@ -44,6 +44,35 @@
       </div>
     </div>
   </div>
+
+<!-- CTA -->
+<section class="max-w-screen-xl mx-auto">
+  <div class="pb-8 lg:pb-16 pl-4 sm:pl-8 lg:pl-16">
+    <div class="shadow-xl bg-slate-50 p-4 sm:p-8 lg:p-16">
+      <div class="flex">
+        <div class="hidden sm:shrink-0 sm:block">
+          <img class="mb-4 h-20" src="{{ (resources.Get "images/glyph.svg").RelPermalink }}" alt="Centro Cilindri">
+        </div>
+        <div class="sm:ml-4">
+          <div class="text-lg sm:text-xl lg:text-2xl mb-8 font-medium leading-tight tracking-tight">
+            <p>I tuoi cilindri perdono olio o aria frequentemente?</p>
+            <p class="text-gray-700">Hai bisogno di una riparazione urgente di un cilindro idraulico o pneumatico?</p>
+            <p>Vorresti assistenza per identificare le guarnizioni dei tuoi cilindri o delle tue presse?</p>
+            <p class="text-gray-700">Vuoi avere un cilindro di scorta ma non hai i disegni costruttivi originali?</p>
+          </div>
+
+          <a href="{{ relref . "/contatti" }}" class="inline-flex items-center justify-center rounded-lg text-lg font-medium red-title">
+            Possiamo aiutarti
+            <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 </div>
 {{ end }}
