--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,11 +51,11 @@
 <section class="max-w-screen-xl mx-auto">
   <div class="pb-8 lg:pb-16 pl-4 sm:pl-8 lg:pl-16">
     <div class="shadow-xl bg-slate-50 p-4 sm:p-8 lg:p-16">
-      <div class="flex">
+      <div class="flex items-center">
         <div class="hidden sm:shrink-0 sm:block">
           <img class="mb-4 h-20" src="{{ (resources.Get "images/glyph.svg").RelPermalink }}" alt="Centro Cilindri">
         </div>
-        <div class="sm:ml-4">
+        <div class="sm:ml-4 lg:ml-6">
           <div class="text-lg sm:text-xl lg:text-2xl mb-8 font-medium leading-relaxed tracking-tight">
             <p>I tuoi cilindri perdono olio o aria frequentemente?</p>
             <p class="text-gray-700">Hai bisogno di una riparazione urgente di un cilindro idraulico o pneumatico?</p>
