--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,18 @@
 
 @import "components/all.css";
 
+/* Text utilities */
+
+.red-title {
+  color: rgb(231, 59, 84);
+  border-color: rgb(231, 59, 84);
+}
+
+.text-contrast {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+
+
 @screen md {
   html {
     font-size: 20px;
