--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -7,7 +7,7 @@
           <img class="mb-4 h-20" src="{{ (resources.Get "images/glyph.svg").RelPermalink }}" alt="Centro Cilindri">
         </div>
         <div class="sm:ml-4">
-          <div class="text-lg sm:text-xl lg:text-2xl mb-8 font-medium leading-tight tracking-tight">
+          <div class="text-lg sm:text-xl mb-8 font-medium leading-tight tracking-tight">
             <p>I tuoi cilindri perdono olio o aria frequentemente?</p>
             <p class="text-gray-700">Hai bisogno di una riparazione urgente di un cilindro idraulico o pneumatico?</p>
             <p>Vorresti assistenza per identificare le guarnizioni dei tuoi cilindri o delle tue presse?</p>
