--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
   <section class="max-w-screen-xl mx-auto relative z-10">
     {{ $background := resources.Get "images/cylinders_packed.jpeg" }}
     <div class="absolute inset-0 z-10 hero-bg" style="background-image: url('https://www.areatecnica.it/img/forging.jpg');"></div>
-    <div class="min-h-[24rem] lg:min-h-screen w-full h-full relative z-20">
+    <div class="min-h-screen w-full h-full relative z-20">
       <div class="text-contrast relative w-full text-white">
         <div class="py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
           <div class="lg:w-full">
