--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,7 +6,7 @@
   <!-- Hero -->
   <section class="max-w-screen-xl mx-auto relative z-10">
     <div class="absolute inset-0 z-10 hero-bg"></div>
-    <div class="min-h-[24rem] lg:min-h-screen w-full h-full relative z-20">
+    <div class="min-h-screen w-full h-full relative z-20">
       <div class="text-contrast relative w-full text-white">
         <div class="py-16 sm:py-24 lg:py-36 px-4 sm:px-8 lg:px-16">
           <div class="lg:w-2/3">
