--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="hidden w-full" id="site-nav">
-      <div class="flex flex-wrap items-center justify-between mt-4 font-medium">
+      <div class="flex flex-wrap items-center justify-between mt-4 uppercase">
         <a href="{{ relref . "/about" }}" class="block py-3">Chi siamo</a>
         <a href="{{ relref . "/servizi" }}" class="block py-3">I nostri servizi</a>
         <a href="{{ relref . "/contatti" }}" class="block py-3">Contatti</a>
