--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,10 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
+.light-gradient {
+  background-image: linear-gradient(to top, rgb(17, 24, 39), rgba(17, 24, 39, 0.4), rgba(17, 24, 39, 0));
+}
+
 @screen md {
   html {
     font-size: 20px;
