--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
               <p class="mb-2">Li ripariamo, li costruiamo</p>
               <p>Forniamo assistenza e guarnizioni</p>
             </div>
-            <a href="{{ relref . "servizi" }}" class="inline-flex items-center justify-center p-2 border rounded-md text-white uppercase font-normal">
+            <a href="{{ relref . "servizi" }}" class="inline-flex items-center justify-center p-2 red-title border rounded-md text-white uppercase font-normal">
               Scopri i nostri servizi
               <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -50,7 +50,7 @@
 <!-- CTA -->
 <section class="max-w-screen-xl mx-auto">
   <div class="pb-8 lg:pb-16 pl-4 sm:pl-8 lg:pl-16">
-    <div class="shadow-xl bg-slate-50 p-4 sm:p-8 lg:p-16">
+    <div class="bg-slate-50 p-4 sm:p-8 lg:p-16">
       <div class="flex items-center">
         <div class="hidden sm:shrink-0 sm:block">
           <img class="mb-4 h-20" src="{{ (resources.Get "images/glyph.svg").RelPermalink }}" alt="Centro Cilindri">
