--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -1,7 +1,7 @@
 <!-- CTA -->
 <section class="max-w-screen-xl mx-auto">
   <div class="py-8 lg:py-16 pl-4 sm:pl-8 lg:pl-16">
-    <div class="shadow-xl bg-slate-50 p-4 sm:p-8 lg:p-16">
+    <div class="bg-slate-50 p-4 sm:p-8 lg:p-16">
       <div class="flex items-center">
         <div class="hidden sm:shrink-0 sm:block">
           <img class="mb-4 h-20" src="{{ (resources.Get "images/glyph.svg").RelPermalink }}" alt="Centro Cilindri">
