--- a/assets/css/components/hero.css
+++ b/assets/css/components/hero.css
@@ -2,8 +2,8 @@
   background-blend-mode: multiply;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 50%;
-  background-color: rgba(30, 35, 40, 0.7);
+  background-position: 25% 50%;
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .hero-bg-gradient {
