--- a/layouts/shortcodes/cta.html
+++ b/layouts/shortcodes/cta.html
@@ -1,26 +1,21 @@
 <!-- CTA -->
-<section class="max-w-screen-xl mx-auto">
-  <div class="py-8 lg:py-16 pl-4 sm:pl-8 lg:pl-16">
-    <div class="bg-slate-50 p-4 sm:p-8 lg:p-16">
-      <div class="flex items-center">
-        <div class="hidden sm:shrink-0 sm:block">
-          <img class="mb-4 h-20" src="{{ (resources.Get "images/glyph.svg").RelPermalink }}" alt="Centro Cilindri">
+<section class="max-w-screen-xl mx-auto p-4 sm:p-8 lg:p-16">
+  <div class="bg-slate-200 rounded-lg py-8 lg:py-16 p-4 sm:p-8 lg:p-16">
+    <div class="flex items-center">
+      <div class="sm:ml-4">
+        <div class="text-lg sm:text-xl mb-8 font-medium leading-relaxed tracking-tight">
+          <p>I tuoi cilindri perdono olio o aria frequentemente?</p>
+          <p class="text-gray-700">Hai bisogno di una riparazione urgente di un cilindro idraulico o pneumatico?</p>
+          <p>Vorresti assistenza per identificare le guarnizioni dei tuoi cilindri o delle tue presse?</p>
+          <p class="text-gray-700">Vuoi avere un cilindro di scorta ma non hai i disegni costruttivi originali?</p>
         </div>
-        <div class="sm:ml-4">
-          <div class="text-lg sm:text-xl mb-8 font-medium leading-relaxed tracking-tight">
-            <p>I tuoi cilindri perdono olio o aria frequentemente?</p>
-            <p class="text-gray-700">Hai bisogno di una riparazione urgente di un cilindro idraulico o pneumatico?</p>
-            <p>Vorresti assistenza per identificare le guarnizioni dei tuoi cilindri o delle tue presse?</p>
-            <p class="text-gray-700">Vuoi avere un cilindro di scorta ma non hai i disegni costruttivi originali?</p>
-          </div>
 
-          <a href="{{ relref . "/contatti" }}" class="inline-flex items-center justify-center rounded-lg text-lg font-medium red-title">
-            Possiamo aiutarti
-            <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-            </svg>
-          </a>
-        </div>
+        <a href="{{ relref . "/contatti" }}" class="inline-flex items-center justify-center rounded-lg text-lg font-medium red-title">
+          Possiamo aiutarti
+          <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          </svg>
+        </a>
       </div>
     </div>
   </div>
