--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -14,10 +14,10 @@
         </svg>
       </button>
     </div>
-    <div class="hidden lg:flex lg:justify-end lg:gap-x-12">
-      <a href="/about" class="text-sm font-semibold leading-6 text-white">Chi siamo</a>
-      <a href="/servizi" class="text-sm font-semibold leading-6 text-white">I nostri servizi</a>
-      <a href="/contatti" class="text-sm font-semibold leading-6 text-white">Contatti</a>
+    <div class="hidden lg:flex lg:justify-end lg:gap-x-12 text-sm font-semibold leading-6 text-white">
+      <a href="/about">Chi siamo</a>
+      <a href="/servizi">I nostri servizi</a>
+      <a href="/contatti">Contatti</a>
     </div>
   </nav>
 
