--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,10 +5,8 @@
 <!-- Hero -->
 <div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
   {{ with .Params.backgroundImage }}<img src="{{ . }}" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">{{ end }}
-  <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
-    <div class="text-center">
-      <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">{{ .Params.heading }}</h1>
-    </div>
+  <div class="max-w-3xl py-32 sm:py-48 lg:py-56">
+    <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">{{ .Params.heading }}</h1>
   </div>
 
   <div class="absolute w-full h-full inset-0 -z-10 bg-black/70 transform-gpu lg:blur-3xl" aria-hidden="true"></div>
