--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,8 +14,8 @@
   background-color: rgb(12, 63, 102);
 }
 
-.text-contrast {
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+.text-shadow {
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 .light-gradient {
@@ -24,6 +24,6 @@
 
 @screen md {
   html {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
