--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8">
     <title>{{ block "title" . }}Centro Cilindri{{ end }}</title>
-    <meta name="viewport" content="width=device-width"/>
-    <meta name="description" content="{{ .Description }}"/>
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="{{ .Description }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     {{/* styles */}}
     {{ $options := dict "inlineImports" true }}
     {{ $styles := resources.Get "css/styles.css" }}
@@ -12,7 +15,7 @@
     {{ if hugo.IsProduction }}
       {{ $styles = $styles | minify | fingerprint | resources.PostProcess }}
     {{ end }}
-    <link href="{{ $styles.RelPermalink }}" rel="stylesheet"/>
+    <link href="{{ $styles.RelPermalink }}" rel="stylesheet">
   </head>
   <body>
     <div class="bg-white">
