--- a/layouts/shortcodes/text-and-image.html
+++ b/layouts/shortcodes/text-and-image.html
@@ -1,5 +1,5 @@
 <div class="flex-none relative isolate overflow-hidden max-w-[18rem] lg:max-w-[28rem] min-h-[28rem] lg:min-h-[32rem] p-6 lg:p-8 lg:py-16 rounded-2xl">
   <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 -z-10 object-cover" alt="{{ .Get "alt" }}">
   <div class="absolute size-full inset-0 -z-10 bg-black/20 bg-gradient-to-b from-black/80"></div>
-  <div class="text-base/7 text-white">{{ .Get "text" }}</div>
+  <div class="text-base/7 text-white font-light">{{ .Get "text" }}</div>
 </div>
